--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Recipick</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
 	<meta charset="utf-8">
 </head>
 <body>
@@ -11,33 +12,37 @@
 <h1>RECIPICK</h1>
 <h2>Your quick and easy way to find delicous recipies!</h2>
 </header>
-	<main>
-		<section id="food">
-			<div id="chicken"><h3>chicken</h3></div>
-			<div id="beef"><h3>beef</h3></div>
-			<div id="pork"><h3>pork</h3></div>
-			<div id="fish"><h3>fish</h3></div>
-			<div id="vegetarian"><h3>veg</h3></div>
-			<div id="vegetables"><h3>vegetables</h3></div>
-			<div id="potato"><h3>potatoes</h3></div>
-			<div id="rice"><h3>rice</h3></div>
-			<div id="bread"><h3>bread</h3></div>
-			<div id="dessert"><h3>dessert</h3></div>
-		</section>
-
+	<main class="main">
 		<section id="cuisine">
-			<div id="american"><h3>american</h3></div>
-			<div id="latin"><h3>latin</h3></div>
-			<div id="thai"><h3>thai</h3></div>
-			<div id="greek"><h3>greek</h3></div>
-			<div id="japanese"><h3>japanese</h3></div>
-			<div id="spainish"><h3>spainish</h3></div>
-			<div id="french"><h3>french</h3></div>
-			<div id="chinese"><h3>chinese</h3></div>
-			<div id="italian"><h3>italian</h3></div>
+			<div id="american"><img src="icons/united-states.png"><h3>American</h3></div>
+			<div id="latin"><img src="icons/mexico.png"><h3>Mexican</h3></div>
+			<div id="thai"><img src="icons/thailand.png"><h3>Thai</h3></div>
+			<div id="greek"><img src="icons/greece.png"><h3>Greek</h3></div>
+			<div id="indain"><img src="icons/india.png"><h3>Indian</h3></div>
+			<div id="japanese"><img src="icons/japan.png"><h3>Japanese</h3></div>
+			<div id="spainish"><img src="icons/spain.png"><h3>Spainish</h3></div>
+			<div id="french"><img src="icons/world.png"><h3>French</h3></div>
+			<div id="chinese"><img src="icons/china.png"><h3>Chinese</h3></div>
+			<div id="italian"><img src="icons/italy.png"><h3>Italian</h3></div>
 		</section>
 
-		<section id="results">	
+
+		<section id="food">
+			<div id="chicken"><img src="icons/chicken.png"><h3>Chicken</h3></div>
+			<div id="beef"><img src="icons/cow.png"><h3>Beef</h3></div>
+			<div id="pork"><img src="icons/pig.png"><h3>Pork</h3></div>
+			<div id="fish"><img src="icons/animals.png"><h3>Fish</h3></div>
+			<div id="vegetarian"><img src="icons/salad.png"><h3>Vegetarian</h3></div>
+			<div id="vegetables"><img src="icons/carrot.png"><h3>Vegetables</h3></div>
+			<div id="potato"><img src="icons/potatoes.png"><h3>Potatoes</h3></div>
+			<div id="rice"><img src="icons/rice.png"><h3>Rice</h3></div>
+			<div id="bread"><img src="icons/bread.png"><h3>Bread</h3></div>
+			<div id="dessert"><img src="icons/doughnut.png"><h3>Dessert</h3></div>
+		</section>
+
+
+
+		<section id="results">
 		</section>
 
 		<section id="recipe">
