--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Recipick</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Raleway" rel="stylesheet">
+	
 	<meta charset="utf-8">
 </head>
 <body>
