--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<h1>RECIPICK</h1>
+<h1 id="title">RECIPICK</h1>
 <h2>Your quick and easy way to find delicous recipies!</h2>
 </header>
 	<main class="main">
@@ -18,10 +18,10 @@
 			<div id="american"><img src="icons/united-states.png"><h3>American</h3></div>
 			<div id="latin"><img src="icons/mexico.png"><h3>Mexican</h3></div>
 			<div id="thai"><img src="icons/thailand.png"><h3>Thai</h3></div>
-			<div id="greek"><img src="icons/greece.png"><h3>Greek</h3></div>
+			<!--<div id="greek"><img src="icons/greece.png"><h3>Greek</h3></div>-->
 			<div id="indain"><img src="icons/india.png"><h3>Indian</h3></div>
 			<div id="japanese"><img src="icons/japan.png"><h3>Japanese</h3></div>
-			<div id="spainish"><img src="icons/spain.png"><h3>Spainish</h3></div>
+			<!--<div id="spainish"><img src="icons/spain.png"><h3>Spainish</h3></div>-->
 			<div id="french"><img src="icons/world.png"><h3>French</h3></div>
 			<div id="chinese"><img src="icons/china.png"><h3>Chinese</h3></div>
 			<div id="italian"><img src="icons/italy.png"><h3>Italian</h3></div>
@@ -35,9 +35,9 @@
 			<div id="fish"><img src="icons/animals.png"><h3>Fish</h3></div>
 			<div id="vegetarian"><img src="icons/salad.png"><h3>Vegetarian</h3></div>
 			<div id="vegetables"><img src="icons/carrot.png"><h3>Vegetables</h3></div>
-			<div id="potato"><img src="icons/potatoes.png"><h3>Potatoes</h3></div>
+			<!--<div id="potato"><img src="icons/potatoes.png"><h3>Potatoes</h3></div>-->
 			<div id="rice"><img src="icons/rice.png"><h3>Rice</h3></div>
-			<div id="bread"><img src="icons/bread.png"><h3>Bread</h3></div>
+			<!--<div id="bread"><img src="icons/bread.png"><h3>Bread</h3></div>-->
 			<div id="dessert"><img src="icons/doughnut.png"><h3>Dessert</h3></div>
 		</section>
 
@@ -48,8 +48,10 @@
 
 		<section id="recipe">
 		</section>
+		<h3 id="return-home">Return Home</h3>
 	</main>
 <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
