--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 <h1>RECIPICK</h1>
-<h2>Your quick and easy way to find delicous recipies!</h2>
+<h2>Your quick and easy way to find delicous recipes!</h2>
 </header>
 	<main class="main">
 		<section id="cuisine">
